[gd_scene load_steps=5 format=3 uid="uid://duy8jeban4b2r"]

[ext_resource type="Script" path="res://hunter.gd" id="1_7i471"]
[ext_resource type="Texture2D" uid="uid://calioikk4wwod" path="res://Assets/Enemy/hunter.png" id="1_gya1x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j6qmw"]
size = Vector2(41, 46)

[sub_resource type="CircleShape2D" id="CircleShape2D_g66xl"]
radius = 200.003

[node name="Hunter" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_7i471")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_gya1x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_j6qmw")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="attackTimer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="Marker2D" type="Marker2D" parent="."]

[node name="site" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="site"]
shape = SubResource("CircleShape2D_g66xl")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="attackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="site" to="." method="_on_site_body_entered"]
[connection signal="body_exited" from="site" to="." method="_on_site_body_exited"]
